--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "shop rg";
+    font-family: shop-rg;
     src: 
     url(' ../public/fonts/shlop-rg.woff2 ') format("woff2"),
     url(' ../public/fonts/shlop-rg.woff ') format("woff"),
@@ -61,7 +61,7 @@ html {
   background-position: center;
 }
  .App__h1{
-    font-family: "shop rg";
+    font-family: shop-rg;
     font-size: 45px;
     margin: 0;
     color: #7FA1C6;
